src/main/java/com/example/demo/errors/ErrorMessages.java
package com.example.demo.errors;

public class ErrorMessages {
    public static final String PRODUCT_NOT_FOUND = "Product not found";
    public static final String INVALID_PRODUCT_ID = "Invalid product ID";
    public static final String PRODUCT_CREATION_FAILED = "Product creation failed";
    public static final String PRODUCT_UPDATE_FAILED = "Product update failed";
    public static final String PRODUCT_DELETION_FAILED = "Product deletion failed";
    public static final String INVALID_PRODUCT_DATA = "Invalid product data";
}
